--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
@@ -13,6 +14,9 @@
     "react-firebaseui": "^6.0.0",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "scichart": "^2.0.2146",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
