--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "chart.js": "^3.6.2",
     "chartjs-adapter-moment": "^1.0.0",
     "firebase": "^9.6.1",
