--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "firebase": "^9.6.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^6.0.0",
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
