--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "request": "^2.88.2",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.0.1"
